add swagger security defintion,  allow api versioning, allow xml comments in api documentation, add localization resources and supported cultures

--- a/Rafeek.API/appsettings.Development.json
+++ b/Rafeek.API/appsettings.Development.json
@@ -5,8 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "RafeekConnection": ""
   },
-  "AllowedHosts": "*"
+  "SwaggerDocOptions": {
+    "Title": "Rafeek API",
+    "Description": "Rafeek API - Complete Documentation",
+    "Organization": "Rafeek"
+  }
 }
