--- a/Rafeek.API/appsettings.Live.json
+++ b/Rafeek.API/appsettings.Live.json
@@ -5,8 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "MyDomain.com",
   "ConnectionStrings": {
     "RafeekConnection": ""
   },
-  "AllowedHosts": "MyDomain.com"
+  "SwaggerDocOptions": {
+    "Title": "Rafeek API",
+    "Description": "Rafeek API - Complete Documentation",
+    "Organization": "Rafeek"
+  }
 }
