--- a/Rafeek.API/Rafeek.API.csproj
+++ b/Rafeek.API/Rafeek.API.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	  <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,7 +23,6 @@
   <ItemGroup>
     <Folder Include="Extensions\" />
     <Folder Include="Logs\" />
-    <Folder Include="Routes\" />
   </ItemGroup>
 
 </Project>
