--- a/Rafeek.API/appsettings.Live.json
+++ b/Rafeek.API/appsettings.Live.json
@@ -11,7 +11,6 @@
   },
   "SwaggerDocOptions": {
     "Title": "Rafeek API",
-    "Description": "Rafeek API - Complete Documentation",
-    "Organization": "Rafeek"
+    "Description": "Rafeek API - Complete Documentation"
   }
 }
