--- a/Rafeek.Application/Rafeek.Application.csproj
+++ b/Rafeek.Application/Rafeek.Application.csproj
@@ -22,6 +22,7 @@
     <Folder Include="Common\Services\" />
     <Folder Include="Handlers\" />
     <Folder Include="Hubs\" />
+    <Folder Include="Localization\Resources\" />
   </ItemGroup>
 
 </Project>
