--- a/Rafeek.API/appsettings.Live.json
+++ b/Rafeek.API/appsettings.Live.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "MyDomain.com",
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "RafeekConnection": ""
   },
