--- a/Rafeek.API/Rafeek.API.csproj
+++ b/Rafeek.API/Rafeek.API.csproj
@@ -25,4 +25,10 @@
     <Folder Include="Logs\" />
   </ItemGroup>
 
+    <ItemGroup>
+	    <Content Update="appsettings.Live.json">
+		    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	    </Content>
+    </ItemGroup>
+
 </Project>
