--- a/Rafeek.API/appsettings.json
+++ b/Rafeek.API/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SwaggerDocOptions": {
+    "Title": "Rafeek API",
+    "Description": "Rafeek API - Complete Documentation"
+  },
+  "SwaggerOptions": {
+    "JsonRoute": "swagger/{documentName}/swagger.json"
+  }
 }
