solve swagger error

--- a/Rafeek.API/appsettings.Live.json
+++ b/Rafeek.API/appsettings.Live.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "RafeekConnection": ""
+  },
+  "SwaggerOptions": {
+    "JsonRoute": "/swagger/{documentName}/swagger.json"
+  },
+  "SwaggerDocOptions": {
+    "Title": "Rafeek API",
+    "Description": "Rafeek API - Complete Documentation"
   }
 }
