--- a/Rafeek.API/appsettings.json
+++ b/Rafeek.API/appsettings.json
@@ -11,6 +11,6 @@
     "Description": "Rafeek API - Complete Documentation"
   },
   "SwaggerOptions": {
-    "JsonRoute": "swagger/{documentName}/swagger.json"
+    "JsonRoute": "/swagger/{documentName}/swagger.json"
   }
 }
