add resource management (upload download reousrce), add localization with supporting en, ar messages, and detect response messages based on request accepted language

--- a/Rafeek.API/Rafeek.API.csproj
+++ b/Rafeek.API/Rafeek.API.csproj
@@ -8,9 +8,19 @@
 	  <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
+	<PropertyGroup Condition=" '$(Configuration)' == '' Or '$(Configuration)' == 'Debug'">
+		<EnvironmentName>Development</EnvironmentName>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)' != '' AND '$(Configuration)' != 'Debug' ">
+		<EnvironmentName>Development</EnvironmentName>
+	</PropertyGroup>
+
+	<PropertyGroup Condition=" '$(RunConfiguration)' == 'Squeak.Api_win' " />
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.1.0" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
     <PackageReference Include="NWebsec.AspNetCore.Middleware" Version="3.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
@@ -23,7 +33,13 @@
 
   <ItemGroup>
     <Folder Include="Extensions\" />
-    <Folder Include="Logs\" />
+    <Folder Include="logs\" />
+  </ItemGroup>
+
+  <ItemGroup>
+	<None Include="nlog.config">
+		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
