--- a/Rafeek.API/appsettings.json
+++ b/Rafeek.API/appsettings.json
@@ -7,8 +7,10 @@
   },
   "AllowedHosts": "*",
   "SwaggerDocOptions": {
-    "Title": "Rafeek API",
-    "Description": "Rafeek API - Complete Documentation"
+    "Title": "Rafeek",
+    "Description": ".NET 6 Web API Template provides endpoints you need to interact ",
+    "Organization": "Organization",
+    "Email": "email@company.com"
   },
   "SwaggerOptions": {
     "JsonRoute": "/swagger/{documentName}/swagger.json"
