--- a/Rafeek.API/web.config
+++ b/Rafeek.API/web.config
@@ -2,11 +2,21 @@
 <configuration>
   <location path="." inheritInChildApplications="false">
     <system.webServer>
+      <security>
+        <requestFiltering>
+          <!-- 200 MB in bytes -->
+          <requestLimits maxAllowedContentLength="209715200" />
+        </requestFiltering>
+      </security>
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath=".\Rafeek.API.exe" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
+		
+		<aspNetCore processPath="dotnet"
+					arguments=".\Rafeek.API.dll"
+					stdoutLogEnabled="false"
+					stdoutLogFile=".\logs\stdout"
+					hostingModel="InProcess" />
     </system.webServer>
   </location>
 </configuration>
-<!--ProjectGuid: 252E302F-854F-4435-A1F5-A971F2E977F2-->
