--- a/Rafeek.API/appsettings.Live.json
+++ b/Rafeek.API/appsettings.Live.json
@@ -6,6 +6,14 @@
     }
   },
   "AllowedHosts": "*",
+  "UploadPaths": {
+    "Root": "Root/",
+    "UserImages": "UserImages/",
+    "GeneralImages": "GeneralImages/",
+    "GeneralVideos": "GeneralVideos/",
+    "GeneralAudios": "GeneralAudios/",
+    "GeneralFiles": "GeneralFiles/"
+  },
   "ConnectionStrings": {
     "RafeekConnection": ""
   }
