--- a/Rafeek.Application/Rafeek.Application.csproj
+++ b/Rafeek.Application/Rafeek.Application.csproj
@@ -1,13 +1,36 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<EnableDefaultEmbeddedResourceItems>false</EnableDefaultEmbeddedResourceItems>
+	</PropertyGroup>
+
+	<ItemGroup>
+      <EmbeddedResource Include="Localization\Messages.resx">
+        <LogicalName>Rafeek.Application.Localization.Messages.resources</LogicalName>
+        <Generator>PublicResXFileCodeGenerator</Generator>
+        <LastGenOutput>Messages.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+
+      <EmbeddedResource Include="Localization\Messages.ar.resx">
+        <LogicalName>Rafeek.Application.Localization.Messages.ar.resources</LogicalName>
+        <DependentUpon>Messages.resx</DependentUpon>
+      </EmbeddedResource>
+    </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
+    <PackageReference Include="MediatR" Version="8.1.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.9" />
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.3.9" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="8.0.23" />
   </ItemGroup>
 
   <ItemGroup>
@@ -15,14 +38,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Common\Behaviours\" />
     <Folder Include="Common\Enums\" />
-    <Folder Include="Common\Exceptions\" />
-    <Folder Include="Common\Interfaces\" />
-    <Folder Include="Common\Services\" />
-    <Folder Include="Handlers\" />
     <Folder Include="Hubs\" />
-    <Folder Include="Localization\Resources\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Localization\Messages.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Messages.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
 
 </Project>
