--- a/Rafeek.API/web.config
+++ b/Rafeek.API/web.config
@@ -11,12 +11,11 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-		
-		<aspNetCore processPath="dotnet"
-					arguments=".\Rafeek.API.dll"
-					stdoutLogEnabled="false"
-					stdoutLogFile=".\logs\stdout"
-					hostingModel="InProcess" />
+      <aspNetCore processPath="dotnet" arguments=".\Rafeek.API.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="InProcess">
+        <environmentVariables>
+          <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Live" />
+        </environmentVariables>
+      </aspNetCore>
     </system.webServer>
   </location>
 </configuration>
