--- a/Rafeek.API/nlog.config
+++ b/Rafeek.API/nlog.config
@@ -6,7 +6,7 @@
       internalLogFile="nlog_rafeek.txt">
 
 	<!-- NLog Variables -->
-	<variable name="logName" value="squeak" />
+	<variable name="logName" value="rafeek" />
 	<variable name="logDir" value="${currentDir}/logs/${logName}" />
 	<variable name="projectName" value="Rafeek" />
 
