--- a/Rafeek.API/appsettings.Live.json
+++ b/Rafeek.API/appsettings.Live.json
@@ -6,6 +6,25 @@
     }
   },
   "AllowedHosts": "*",
+  "IpRateLimiting": {
+    "EnableEndpointRateLimiting": true,
+    "StackBlockedRequests": false,
+    "RealIpHeader": "X-Real-IP",
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 429,
+    "GeneralRules": [
+      {
+        "Endpoint": "*:/api/*",
+        "Period": "1m",
+        "Limit": 60
+      },
+      {
+        "Endpoint": "*:/health",
+        "Period": "10s",
+        "Limit": 2
+      }
+    ]
+  },
   "UploadPaths": {
     "Root": "Root/",
     "UserImages": "UserImages/",
