configure and hosting two databases identity database, base database

--- a/Rafeek.API/appsettings.Development.json
+++ b/Rafeek.API/appsettings.Development.json
@@ -17,11 +17,6 @@
         "Endpoint": "*:/api/*",
         "Period": "1m",
         "Limit": 60
-      },
-      {
-        "Endpoint": "*:/health",
-        "Period": "10s",
-        "Limit": 2
       }
     ]
   },
@@ -32,5 +27,9 @@
     "GeneralVideos": "GeneralVideos/",
     "GeneralAudios": "GeneralAudios/",
     "GeneralFiles": "GeneralFiles/"
+  },
+  "ConnectionStrings": {
+    "RafeekConnectionString": "Server=db39012.public.databaseasp.net; Database=db39012; User Id=db39012; Password=Mohamed@1234; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;",
+    "RafeekIdentityConnectionString": "Server=db38997.public.databaseasp.net;Database=db38997;User Id=db38997;Password=Mohamed@1234;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
   }
 }
