--- a/Rafeek.API/nlog.config
+++ b/Rafeek.API/nlog.config
@@ -46,8 +46,20 @@
 
 		<!--Console Target for hosting lifetime messages to improve Docker / Visual Studio startup detection -->
 		<target  name="lifetimeConsole"
-				 xsi:type="Console"
-				 layout="${level:truncate=4:tolower=true}\: ${logger}[0]${newline}      ${message}${exception:format=tostring}" />
+				 xsi:type="ColoredConsole"
+				 layout="${level:truncate=4:tolower=true}\: ${logger}[0]${newline}      ${message}${exception:format=tostring}">
+			<highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
+			<highlight-row condition="level == LogLevel.Info" foregroundColor="Gray" />
+			<highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow" />
+			<highlight-row condition="level == LogLevel.Error" foregroundColor="Red" />
+			<highlight-row condition="level == LogLevel.Fatal" foregroundColor="Red" backgroundColor="White" />
+		</target>
+
+		<!-- Stdout file target for capturing all application output to file -->
+		<target name="stdout" xsi:type="File"
+				fileName="${logDir}\stdout_${date:format=yyyyMMdd}_${processid}.log"
+				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}"
+				autoFlush="true" />
 	</targets>
 
 	<!-- rules to map from logger name to target -->
@@ -58,14 +70,14 @@
 		<!-- Capture only Rafeek.* class Error level logging -->
 		<logger name="Rafeek.*" minlevel="Error" writeTo="errorLog" />
 
-		<!--Output hosting lifetime messages to console target for faster startup detection -->
-		<logger name="Microsoft.Hosting.Lifetime" minlevel="Info" writeTo="lifetimeConsole" final="true" />
-
 		<!-- All logs, including from Microsoft-->
 		<logger name="*" minlevel="Trace" writeTo="allfile" />
-
-		<!-- Skip non-critical Microsoft logs and so log only logs-->
-		<logger name="Microsoft.*" maxlevel="Info" final="true" />
-		<logger name="System.Net.Http.*" maxlevel="Info" final="true" />
+		
+		<!-- Write everything (Info+) to stdout file - CRITICAL FOR STDOUT LOGS -->
+		<logger name="*" minlevel="Info" writeTo="stdout" />
+		
+		<!-- Write everything (Info+) to Console so stdout works in Docker/IIS -->
+		<logger name="*" minlevel="Info" writeTo="lifetimeConsole" />
 	</rules>
+
 </nlog>
