--- a/Rafeek.Application/Rafeek.Application.csproj
+++ b/Rafeek.Application/Rafeek.Application.csproj
@@ -21,6 +21,7 @@
     </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="15.1.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
     <PackageReference Include="MediatR" Version="8.1.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
