update connectionstrings (development, live), then add migration to change aspnetusers to applicationusers

--- a/Rafeek.API/appsettings.Development.json
+++ b/Rafeek.API/appsettings.Development.json
@@ -66,7 +66,7 @@
     "Files": "https://localhost:44351/files/"
   },
   "ConnectionStrings": {
-    "RafeekConnectionString": "Server=db39012.public.databaseasp.net; Database=db39012; User Id=db39012; Password=Mohamed@1234; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;",
-    "RafeekIdentityConnectionString": "Server=db39012.public.databaseasp.net; Database=db39012; User Id=db39012; Password=Mohamed@1234; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+    "RafeekConnectionString": "Server =.; Database = RafeekDb;Trusted_Connection = True ; TrustServerCertificate = True;",
+    "RafeekIdentityConnectionString": "Server =.;Database = RafeekDb;Trusted_Connection= True;TrustServerCertificate = True;"
   }
 }
