--- a/Rafeek.API/appsettings.Live.json
+++ b/Rafeek.API/appsettings.Live.json
@@ -66,7 +66,7 @@
     "Files": "https://rafeek-live.runasp.net/files/"
   },
   "ConnectionStrings": {
-    "RafeekConnectionString": "Server=db39012.public.databaseasp.net; Database=db39012; User Id=db39012; Password=Mohamed@1234; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;",
-    "RafeekIdentityConnectionString": "Server=db39012.public.databaseasp.net; Database=db39012; User Id=db39012; Password=Mohamed@1234; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+    "RafeekConnectionString": "Server=db40410.public.databaseasp.net; Database=RafeekDb; User Id=db40410; Password=Mo@123456; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;",
+    "RafeekIdentityConnectionString": "Server=db40410.public.databaseasp.net; Database=RafeekDb; User Id=db40410; Password=Mo@123456; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
   }
 }
