update student Academic Profile

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ packages/
 Rafeek.API/wwwroot/
 Rafeek.API/logs/
 /Rafeek.API/nlog_rafeek.txt
+
+
+/Rafeek.Persistence/Migrations/Rafeek/
+/Rafeek.Persistence/Migrations/Identity/
