update implementation of signup handle roles with make a role authorize attribute filter. and handle nameidentifier in jwt with encrypting it. fix un resolved relationships

--- a/Rafeek.API/nlog.config
+++ b/Rafeek.API/nlog.config
@@ -68,7 +68,7 @@
 		<logger name="Rafeek.*" level="Info" writeTo="infoLog" />
 
 		<!-- Capture only Rafeek.* class Error level logging -->
-		<logger name="Rafeek.*" minlevel="Error" writeTo="errorLog" />
+		<logger name="*" minlevel="Error" writeTo="errorLog" />
 
 		<!-- All logs, including from Microsoft-->
 		<logger name="*" minlevel="Trace" writeTo="allfile" />
