--- a/Rafeek.API/appsettings.Live.json
+++ b/Rafeek.API/appsettings.Live.json
@@ -66,7 +66,7 @@
     "Files": "https://rafeek-live.runasp.net/files/"
   },
   "ConnectionStrings": {
-    "RafeekConnectionString": "Server=db40410.public.databaseasp.net; Database=db40410; User Id=db40410; Password=Mo@123456; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;",
-    "RafeekIdentityConnectionString": "Server=db40410.public.databaseasp.net; Database=db40410; User Id=db40410; Password=Mo@123456; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+    "RafeekConnectionString": "Server=db41346.public.databaseasp.net; Database=db41346; User Id=db41346; Password=Mo@123456; Encrypt=True; TrustServerCertificate=True;",
+    "RafeekIdentityConnectionString": "Server=db41346.public.databaseasp.net; Database=db41346; User Id=db41346; Password=Mo@123456; Encrypt=True; TrustServerCertificate=True;"
   }
 }
